- upgraded jquery waypoints - only call slideshow when there’s images - fix how waypoints is activated - adjust spacing for social footer icons

--- a/source/stylesheets/layout.css.sass
+++ b/source/stylesheets/layout.css.sass
@@ -521,7 +521,7 @@ footer
             
   .social_footer
     list-style: none
-    left: 120px
+    left: 130px
     padding: 0
     margin: 0
     position: absolute
